--- a/PortfólioMVC/Views/Home/Index.cshtml
+++ b/PortfólioMVC/Views/Home/Index.cshtml
@@ -28,8 +28,8 @@
             <div id="filmes">
                 <img src="img-2/the shining.png" title="Filme The Shining" alt="Poster do filme The Shining">
                 <img src="img-2/silence of the lambs.png" title="Filme The Silence of the Lambs" alt="Poster do filme The Silence of the Lambs">
-                <img src="img-2/taxi driver.png" title="Filme Taxi Driver" alt="Poster do filme Taxi Driver">
-                <img src="img-2/pulp fiction.png" title="Filme Pulp Fiction" alt="Poster do filme Pulp Fiction">
+                <img src="img-2/taxi driver.png" title="Filme Pulp Fiction" alt="Poster do filme Pulp Fiction">
+                <img src="img-2/pulp fiction.png" title="Filme Taxi Driver" alt="Poster do filme Taxi Driver">
             </div>
     </section>
 </main>
