--- a/RoleTopMVC/Views/Cliente/Login.cshtml
+++ b/RoleTopMVC/Views/Cliente/Login.cshtml
@@ -1,6 +1,6 @@
 <main>
     <h2>Login</h2>
-    <form method="GET" action="cadastro-evento.html">
+    <form method="POST" action='@Url.Action("Login", "Cliente")'>
         <div>
             <label for="email">E-mail</label>
             <br>
