--- a/RoleTopMVC/Views/Shared/_Layout.cshtml
+++ b/RoleTopMVC/Views/Shared/_Layout.cshtml
@@ -14,6 +14,11 @@
         {
             <link href="/css/login.css" rel="stylesheet" type="text/css">
         }
+
+        @if("Sobre".Equals(nomeView))
+        {
+            <link href="/css/sobre-style.css" rel="stylesheet" type="text/css">
+        }
     </head>
     <body>
         <header>
@@ -31,7 +36,7 @@
                             </a>
                         </li>
                         <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Home" asp-action="Index" class="active">Home</a></li>
-                        <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href="sobre.html">Sobre</a></li>
+                        <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Sobre" asp-action="Index">Sobre</a></li>
                         <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href="eventos.html">Eventos</a></li>
                         <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href="contato.html">Contato</a></li>
                         <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Cliente" asp-action="Login">Login</a></li>
