--- a/RoleTopMVC/Views/Agenda/Index.cshtml
+++ b/RoleTopMVC/Views/Agenda/Index.cshtml
@@ -62,8 +62,8 @@
         <div class="box-servicos">
             <label for="servicos">Serviços a disposição (opcional)</label>
             <br>
-            <input id="servicos-som" type="checkbox">Som<br>
-            <input id="servicos-luz" type="checkbox">Iluminação<br>
+            <input id="servicos-som" type="checkbox" name="som">Som<br>
+            <input id="servicos-luz" type="checkbox" name="luz">Iluminação<br>
         </div>
 
         <div>
@@ -77,7 +77,7 @@
         </div>
 
         <div>
-            <input id="servicos-condicoes" type="checkbox">Concordo e aceito os serviços e condições da empresa (Ler)<br>
+            <input id="servicos-condicoes" type="checkbox" required>Concordo e aceito os serviços e condições da empresa (Ler)<br>
         </div>
 
         <p><a href="">Imprimir Boleto</a></p>
