--- a/RoleTopMVC/Views/Shared/Erro.cshtml
+++ b/RoleTopMVC/Views/Shared/Erro.cshtml
@@ -1,3 +1,5 @@
 <main>
-    <h2>@ViewData["Action"] houve falha no processo</h2>
+    <section id="sucesso-erro">
+        <h2>@ViewData["Action"] houve falha no processo</h2>
+    </section>
 </main>
