--- a/RoleTopMVC/Views/Shared/Sucesso.cshtml
+++ b/RoleTopMVC/Views/Shared/Sucesso.cshtml
@@ -1,3 +1,5 @@
 <main>
-    <h2>@ViewData["Action"] efetuado com sucesso! </h2>
+    <section id="sucesso-erro">
+        <h2>@ViewData["Action"] efetuado com sucesso! </h2>
+    </section>
 </main>
