--- a/RoleTopMVC/Views/Shared/_Layout.cshtml
+++ b/RoleTopMVC/Views/Shared/_Layout.cshtml
@@ -24,6 +24,11 @@
         {
             <link href="/css/eventos-style.css" rel="stylesheet" type="text/css">
         }
+
+        @if("Contato".Equals(nomeView))
+        {
+            <link href="css/contato.css" rel="stylesheet" type="text/css">
+        }
     </head>
     <body>
         <header>
@@ -43,7 +48,7 @@
                         <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Home" asp-action="Index" class="active">Home</a></li>
                         <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Sobre" asp-action="Index">Sobre</a></li>
                         <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Evento" asp-action="Index">Eventos</a></li>
-                        <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href="contato.html">Contato</a></li>
+                        <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Contato" asp-action="Index">Contato</a></li>
                         <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Cliente" asp-action="Login">Login</a></li>
                     </ul>
                 </nav>
