--- a/McBonaldsMVC/Views/Shared/Sucesso.cshtml
+++ b/McBonaldsMVC/Views/Shared/Sucesso.cshtml
@@ -1,3 +1,8 @@
+@model McBonaldsMVC.ViewModels.RespostaViewModel
+
 <main>
+    <div>
+        <p>@Model.Mensagem</p>
+    </div>
     <h2> @ViewData["Action"] feito com sucesso! </h2>
 </main>
