--- a/McBonaldsMVC/wwwroot/css/style.css
+++ b/McBonaldsMVC/wwwroot/css/style.css
@@ -27,7 +27,7 @@ h2 {
     text-shadow: 
     -1px -1px 0 #ff9933,
     1px -1px 0 #ff9933,
-    -1px  1px 0 #ff9933,
+   -1px  1px 0 #ff9933,
     1px  1px 0 #ff9933;
 }
 
@@ -207,7 +207,7 @@ a.active {
     text-shadow: 
     -1px -1px 0 #ff9933,
     1px -1px 0 #ff9933,
-    -1px  1px 0 #ff9933,
+   -1px  1px 0 #ff9933,
     1px  1px 0 #ff9933;
 }
 
@@ -235,27 +235,27 @@ a.active {
     max-width: 23%;
 }
 
-.flex-group > div {
+ .flex-group > div {
     background-color: #ff9933;
-}
+ }
 
-.flex-group.food-section > div:hover {
+ .flex-group.food-section > div:hover {
     margin-top: -15px;
     box-shadow: -3px 10px rgba(0, 0, 0, 0.3);
     filter: grayscale(0);
-}
-
-.flex-group > div > p {
+ }
+ 
+ .flex-group > div > p {
     height: 1.5em;
-}
-
-.flex-group > div > p:nth-child(odd) {
+ }
+ 
+ .flex-group > div > p:nth-child(odd) {
     font-weight: bold;
     line-height: 0.5em;
     font-size: 2em;
-}
-
-.flex-group > div > p:nth-child(even) {
+ }
+ 
+ .flex-group > div > p:nth-child(even) {
     font-weight: bold;
     font-size: 3.5em;
     margin-top: -0.5em;
@@ -263,38 +263,38 @@ a.active {
                   3px -3px 0 #ff9933,
                  -3px  3px 0 #ff9933,
                   3px  3px 0 #ff9933;
-}
+ }
 
-.food-container > img {
+ .food-container > img {
     width: 100%;
-}
+ }
 
-#historia {
-    background-color: #a70000;
-    text-align: left;
-    color: #fff;
-    vertical-align: top;
-}
+ #historia {
+     background-color: #a70000;
+     text-align: left;
+     color: #fff;
+     vertical-align: top;
+ }
 
-#historia p {
-    font-size: 1.2em;
-}
+ #historia p {
+     font-size: 1.2em;
+ }
 
-#historia h2 {
+ #historia h2 {
     color: #361a0c;
     text-shadow: 
     -1px -1px 0 #ff9933,
     1px -1px 0 #ff9933,
-    -1px  1px 0 #ff9933,
+   -1px  1px 0 #ff9933,
     1px  1px 0 #ff9933;
     margin: 0 2em 0 0;
-}
+ }
 
-#historia .flex-group {
-    justify-content: flex-start;
-    align-items: center;
-    vertical-align: top;
-}
+ #historia .flex-group {
+     justify-content: flex-start;
+     align-items: center;
+     vertical-align: top;
+ }
 
 #historia a {
     display: block;
@@ -326,6 +326,43 @@ address {
     padding-left: 0.7em;
 }
 
+table {
+    text-align: center;
+    color: #fff;
+    border: 1px dashed #ff9933;
+    width: 100%;
+    padding: 5px;
+    word-break: normal;
+}
+
+table th {
+    background-color:#a70000;
+}
+
+table a {
+    text-decoration: none;
+    color: #ff9933;
+}
+
+table a:hover {
+    text-decoration: underline;
+}
+
+tfoot td {
+    text-align: center;
+    color: #ff9933;
+    background-color: #a70000;
+}
+
+thead > tr:first-child > th:last-child {
+    padding: 0 .5em;
+}
+
+.mensagem {
+    color: #fff;
+    font-weight: bold;
+}
+
 @media (max-width: 1200px) {
     #banner p {
         font-size: 1.6em;
@@ -345,9 +382,9 @@ address {
         font-weight: bold;
         line-height: 0.5em;
         font-size: 1em;
-    }
-    
-    .flex-group > div > p:nth-child(even) {
+     }
+     
+     .flex-group > div > p:nth-child(even) {
         font-weight: bold;
         font-size: 2.5em;
         margin-top: -0.5em;
@@ -355,9 +392,9 @@ address {
                       3px -3px 0 #ff9933,
                      -3px  3px 0 #ff9933,
                       3px  3px 0 #ff9933;
-    }
+     }
 
-    #banner p {
+     #banner p {
         font-size: 1.3em;
         font-weight: bold;
         padding-left: 2.5em;
