--- a/RoleTopMVC/Views/Shared/_Layout.cshtml
+++ b/RoleTopMVC/Views/Shared/_Layout.cshtml
@@ -1,6 +1,4 @@
-﻿@{
-    var nomeView = (string) ViewData["NomeView"];
-}
+﻿@model RoleTopMVC.ViewModels.BaseViewModel;
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -10,22 +8,27 @@
         <link href="/img/logo.png" rel="icon" type="image/x-icon"/>
         <script src="https://kit.fontawesome.com/349a64cb04.js"></script>
         <link href="/css/style.css" rel="stylesheet" type="text/css">
-        @if("Cliente".Equals(nomeView))
+        @if("Cliente".Equals(@Model.NomeView))
         {
             <link href="/css/login.css" rel="stylesheet" type="text/css">
         }
 
-        @if("Sobre".Equals(nomeView))
+        @if("Administrador".Equals(@Model.NomeView))
+        {
+            <link href="css/adm.css" rel="stylesheet" type="text/css">
+        }
+
+        @if("Sobre".Equals(@Model.NomeView))
         {
             <link href="/css/sobre-style.css" rel="stylesheet" type="text/css">
         }
 
-        @if("Eventos".Equals(nomeView))
+        @if("Eventos".Equals(@Model.NomeView))
         {
             <link href="/css/eventos-style.css" rel="stylesheet" type="text/css">
         }
 
-        @if("Contato".Equals(nomeView))
+        @if("Contato".Equals(@Model.NomeView))
         {
             <link href="css/contato.css" rel="stylesheet" type="text/css">
         }
@@ -49,7 +52,16 @@
                         <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Sobre" asp-action="Index">Sobre</a></li>
                         <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Evento" asp-action="Index">Eventos</a></li>
                         <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Contato" asp-action="Index">Contato</a></li>
-                        <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Cliente" asp-action="Login">Login</a></li>
+                        @if(string.IsNullOrEmpty(@Model.UsuarioEmail))
+                        {
+                            <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Cliente" asp-action="Login">Login/Cadastro</a></li>
+                        }
+                        else
+                        {
+                            <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Cliente" asp-action="Logoff">Logoff</a></li>
+                            <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Cliente" asp-action="Histórico">Agendamentos</a></li>
+                        }
+                        <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Agenda" asp-action="Index">Agende Já!</a></li>
                     </ul>
                 </nav>
             </div>
@@ -97,9 +109,7 @@
                 for (var button of commonButtons) {
                     button.classList.toggle("active");
                 }
-    
             }
-            
         </script>
     </body>
 </html>
