--- a/RoleTopMVC/wwwroot/css/style.css
+++ b/RoleTopMVC/wwwroot/css/style.css
@@ -7,6 +7,10 @@ body {
     font-family: 'Gandhi Sans', sans-serif;
 }
 
+main{
+    background-color: #93005f;
+}
+
 #sucesso-erro {
     padding: 16em;
 }
