--- a/RoleTopMVC/Views/Agenda/Index.cshtml
+++ b/RoleTopMVC/Views/Agenda/Index.cshtml
@@ -22,7 +22,7 @@
         <div >
             <label for="data">Data</label>
             <br>
-            <input id="data" type="date" name="data-do-evento">
+            <input id="data" type="date" name="data">
         </div>
 
         <div>
