--- a/RoleTopMVC/Views/Shared/_Layout.cshtml
+++ b/RoleTopMVC/Views/Shared/_Layout.cshtml
@@ -12,9 +12,9 @@
         {
             <link href="/css/login.css" rel="stylesheet" type="text/css">
         }
-        @if("Administrador".Equals(@Model.NomeView))
+        @if("Dashboard".Equals(@Model.NomeView))
         {
-            <link href="css/adm.css" rel="stylesheet" type="text/css">
+            <link href="/css/adm.css" rel="stylesheet" type="text/css">
         }
         @if("Sobre".Equals(@Model.NomeView))
         {
@@ -28,19 +28,19 @@
 
         @if("Contato".Equals(@Model.NomeView))
         {
-            <link href="css/contato.css" rel="stylesheet" type="text/css">
+            <link href="/css/contato.css" rel="stylesheet" type="text/css">
         }
 
         @if("Agenda".Equals(@Model.NomeView))
         {
             <link href="/css/login.css" rel="stylesheet" type="text/css">
-            <link href="css/cadastro-evento.css" rel="stylesheet" type="text/css">
+            <link href="/css/cadastro-evento.css" rel="stylesheet" type="text/css">
         }
 
         @if("Histórico".Equals(@Model.NomeView))
         {
             <link href="/css/login.css" rel="stylesheet" type="text/css">
-            <link href="css/adm.css" rel="stylesheet" type="text/css">
+            <link href="/css/adm.css" rel="stylesheet" type="text/css">
         }
         
     </head>
