--- a/RoleTopMVC/Views/Cliente/Historico.cshtml
+++ b/RoleTopMVC/Views/Cliente/Historico.cshtml
@@ -19,7 +19,7 @@
         <tbody>
             @foreach(var agenda in Model.Agendar) {
                 <tr>
-                    <td>@agenda.Agenda.DataDoEvento</td>
+                    <td>@agenda.Agenda.DataHora</td>
                     <td>@agenda.Agenda.Tipo</td>
                     <td>@agenda.Agenda.Evento</td>
                     <td>@agenda.Agenda.Descricao</td>
