--- a/RoleTopMVC/Views/Administrador/Dashboard.cshtml
+++ b/RoleTopMVC/Views/Administrador/Dashboard.cshtml
@@ -11,11 +11,11 @@
             </div>
             <div class="box-status-aluguel pendentes">
                 <h4>Pendentes</h4>
-                <p>@Model.AgendamentoAprovado</p>
+                <p>@Model.AgendamentoPendente</p>
             </div>
             <div class="box-status-aluguel reprovados">
                 <h4>Reprovados</h4>
-                <p>@Model.AgendamentoAprovado</p>
+                <p>@Model.AgendamentoReprovado</p>
             </div>
         </div>
     </section>
@@ -47,10 +47,9 @@
                     <tr>
                         <td>@agenda.Cliente.Nome</td>
                         <td>@agenda.Cliente.Email</td>
-                        <td>@agenda.Cliente.Telefone</td>
                         <td>@agenda.Agenda.Tipo</td>
                         <td>@agenda.Agenda.Evento</td>
-                        <td>@agenda.Agenda.DataDoEvento</td>
+                        <td>@agenda.Agenda.DataHora</td>
                         <td>@agenda.Agenda.Descricao</td>
                         <td><a href='@Url.Action("Aprovar", "Agenda", new {id = @agenda.Id})'><i class="fas fa-check"></i></a></td>
                         <td><a href='@Url.Action("Reprovar", "Agenda", new {id = @agenda.Id})'><i class="fas fa-times"></i></a></td>
