--- a/RoleTopMVC/Views/Cliente/Login.cshtml
+++ b/RoleTopMVC/Views/Cliente/Login.cshtml
@@ -33,7 +33,7 @@
         <div>
             <label for="data-nascimento">Data de Nascimento</label>
             <br>
-            <input id="data-nascimento" type="date" name="data-nascimento" required>
+            <input id="data-nascimento" type="date" name="data-nascimento">
         </div>
 
         <div>
