--- a/RoleTopMVC/wwwroot/css/login.css
+++ b/RoleTopMVC/wwwroot/css/login.css
@@ -102,6 +102,7 @@ form input[type="submit"] {
     height: 2em;
     border-radius: 4px;
     text-align: center;
+    margin: 0 0 1em 0;
 }
 
 form input[type="submit"]:hover {
@@ -162,8 +163,6 @@ select {
 }
 
 .box-servicos {
-    background-color: #fff;
-    width: 33%;
     padding: 2px 4px;
 }
 
