--- a/RoleTopMVC/Views/Administrador/Historico.cshtml
+++ b/RoleTopMVC/Views/Administrador/Historico.cshtml
@@ -1,27 +1,8 @@
 @model RoleTopMVC.ViewModels.DashboardViewModel;
 <main>
-    <h2>Dashboard</h2>
-
-    <section id="status-aluguel">
-        <h3>Status dos Alugueis</h3>
-        <div id="painel">
-            <div class="box-status-aluguel aprovados">
-                <h4>Aprovados</h4>
-                <p>@Model.AgendamentoAprovado</p>
-            </div>
-            <div class="box-status-aluguel pendentes">
-                <h4>Pendentes</h4>
-                <p>@Model.AgendamentoPendente</p>
-            </div>
-            <div class="box-status-aluguel reprovados">
-                <h4>Reprovados</h4>
-                <p>@Model.AgendamentoReprovado</p>
-            </div>
-        </div>
-    </section>
+    <h2>Lista de Eventos</h2>
 
     <section id="lista de algueis">
-        <h3>Lista de Alugueis</h3>
         <table>
             <thead>
                 <tr>
@@ -31,12 +12,12 @@
                     <th>Evento</th>
                     <th>Data e Hora</th>
                     <th>Descrição</th>
-                    <th colspan="2">Aceitar/Negar</th>
+                    <th>Status do Pedido</th>
                 </tr>
             </thead>
             <tfoot>
                 <tr>
-                    <td colspan="8">
+                    <td colspan="7">
                         <p>Atualizado em @DateTime.Now</p>
                     </td>
                 </tr>
@@ -51,8 +32,7 @@
                         <td>@agenda.Agenda.Evento</td>
                         <td>@agenda.Agenda.DataHora</td>
                         <td>@agenda.Agenda.Descricao</td>
-                        <td><a href='@Url.Action("Aprovar", "Agenda", new {id = @agenda.Id})'><i class="fas fa-check"></i></a></td>
-                        <td><a href='@Url.Action("Reprovar", "Agenda", new {id = @agenda.Id})'><i class="fas fa-times"></i></a></td>
+                        <td>@agenda.Status</td>
                     </tr>
                 }
             </tbody>
