--- a/RoleTopMVC/Views/Agenda/Index.cshtml
+++ b/RoleTopMVC/Views/Agenda/Index.cshtml
@@ -95,7 +95,7 @@
         </div>
 
         <div>
-            <input id="total" type="text" placeholder="Total: R$10.000" name="total" disabled>
+            <input id="total" type="text" placeholder="Total: R$10.000 (preço mínimo)" name="total" disabled>
         </div>
 
         <div>
