--- a/RoleTopMVC/wwwroot/css/adm.css
+++ b/RoleTopMVC/wwwroot/css/adm.css
@@ -1,10 +1,14 @@
+html,body,main {
+    height: 100%;
+}
+
 body {
     background-color: #93005f;
 }
 
 main {
     width: 80%;
-    padding: 0 0 3em 8em;
+    padding: 0 0 0 8em;
 }
 
 #painel {
@@ -15,7 +19,7 @@ main {
 
 h2 {
     font-size: 1.8em;
-    padding: 1em 0;
+    padding: 2em 0;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -24,6 +28,8 @@ h2 {
 h3 {
     padding: 0.5em 0;
     font-size: 1.5em;
+    text-decoration: none;
+    color: #000;
 }
 
 h4 {
