--- a/RoleTopMVC/Views/Administrador/Historico.cshtml
+++ b/RoleTopMVC/Views/Administrador/Historico.cshtml
@@ -32,7 +32,18 @@
                         <td>@agenda.Agenda.Evento</td>
                         <td>@agenda.Agenda.DataHora</td>
                         <td>@agenda.Agenda.Descricao</td>
-                        <td>@agenda.Status</td>
+                        @if(@agenda.Status == 0)
+                        {
+                            <td>Pendente</td>
+                        }
+                        else if (@agenda.Status == 1)
+                        {
+                            <td>Aprovado</td>
+                        }
+                        else if (@agenda.Status == 2)
+                        {
+                            <td>Reprovado</td>
+                        }
                     </tr>
                 }
             </tbody>
