--- a/RoleTopMVC/Views/Agenda/Index.cshtml
+++ b/RoleTopMVC/Views/Agenda/Index.cshtml
@@ -95,7 +95,7 @@
         </div>
 
         <div>
-            <input id="total" type="text" placeholder="Total: R$10.000 (preço mínimo)" name="total" disabled>
+            <label id="total" for="total">Total preço mínimo: R$10.000 (podendo alterar)</label>
         </div>
 
         <div>
