--- a/RoleTopMVC/Views/Administrador/Dashboard.cshtml
+++ b/RoleTopMVC/Views/Administrador/Dashboard.cshtml
@@ -21,7 +21,7 @@
     </section>
 
     <section id="lista de algueis">
-        <h3>Lista de Alugueis</h3>
+        <h3>Lista de Alugueis Pendentes</h3>
         <table>
             <thead>
                 <tr>
@@ -38,6 +38,7 @@
                 <tr>
                     <td colspan="8">
                         <p>Atualizado em @DateTime.Now</p>
+                        <a asp-controller="Administrador" asp-action="Historico"><p>Visualizar lista de eventos geral</p></a>
                     </td>
                 </tr>
             </tfoot>
