--- a/RoleTopMVC/Views/Agenda/Index.cshtml
+++ b/RoleTopMVC/Views/Agenda/Index.cshtml
@@ -54,9 +54,15 @@
         </div>
 
         <div>
+            <label for="convidados">Número de Convidados</label>
+            <br>
+            <input id="convidados" type="number" placeholder="*Máximo de 400 pessoas" name="convidados" min="1" max="400" required>
+        </div>
+
+        <div>
             <label for="descricao">Descrição do Evento</label>
             <br>
-            <textarea cols="60" rows="7" placeholder="Ex: número de convidados, atrações, descrição do evento, etc." name="descricao" maxlength="85" required></textarea>
+            <textarea cols="60" rows="7" placeholder="Ex: atrações, descrição do evento, etc." name="descricao" maxlength="85" required></textarea>
         </div>
 
         <div class="box-servicos">
