--- a/RoleTopMVC/Views/Cliente/Historico.cshtml
+++ b/RoleTopMVC/Views/Cliente/Historico.cshtml
@@ -12,6 +12,7 @@
                 <th>Data e Hora</th>
                 <th>Tipo de evento</th>
                 <th>Evento</th>
+                <th>Nº Convidados</th>
                 <th>Descrição</th>
                 <th>Serviços</th>
                 <th>Status</th>
@@ -23,6 +24,7 @@
                     <td>@agenda.Agenda.DataHora</td>
                     <td>@agenda.Agenda.Tipo</td>
                     <td>@agenda.Agenda.Evento</td>
+                    <td>@agenda.Agenda.Convidados</td>
                     <td>@agenda.Agenda.Descricao</td>
                     <td>@agenda.Agenda.Servicos</td>
                     @if(@agenda.Status == 0)
